# libpointmatcher

./: AmentBuild.cmake  CMakeLists.txt  CatkinBuild.cmake  README.md  package.xml
contrib/yaml-cpp-pm/include/yaml-cpp-pm/: emitter.h  iterator.h  node.h  parser.h
contrib/yaml-cpp-pm/src/: emitterstate.cpp  iterator.cpp  node.cpp  nodeownership.cpp  ptr_stack.h  ptr_vector.h  scanner.cpp  setting.h  singledocparser.h
debian/: control
doc/: CompilationMac.md  Datafilters.md
pointmatcher/: DataPoints.cpp  DataPointsFilter.cpp  DataPointsFiltersImpl.h  ErrorMinimizer.cpp  ICP.cpp  MatchersImpl.cpp  OutlierFiltersImpl.cpp  PointMatcher.h  Registry.cpp
pointmatcher/DataPointsFilters/: CovarianceSampling.cpp  Gestalt.cpp  HiddenPointRemoval.cpp  NormalSpace.cpp  NormalSpace.h  OctreeGrid.cpp  OctreeGrid.h  OrganizedCloudSurfaceNormal.cpp  OrganizedCloudSurfaceNormal.h  RemoveNaN.cpp  SamplingSurfaceNormal.cpp  SurfaceNormal.cpp
pointmatcher/DataPointsFilters/utils/: utils.h
pointmatcher/DataPointsFilters/utils/octree/: Octree.h  Octree.tpp  OctreeSamplers.h  OctreeSamplers.tpp
pointmatcher/ErrorMinimizers/: PointToPlane.cpp  PointToPlane.h
utest/: CMakeLists.txt  utest.cpp  utest.h
utest/ui/: DataFilters.cpp  PointCloudGenerator.cpp  TransformationError.h  utils_geometry.cpp  utils_geometry.h  utils_transformations.h
utest/ui/icp/: Conditioning.cpp  RegistrationTestCase.cpp  RegistrationTestCase.h  RegistrationTestResult.cpp  RegistrationTestResult.h  utils_registration.cpp  utils_registration.h
utest/ui/octree/: Octree.cpp
