<package format="2">
  <name>libpointmatcher</name>
  <version>1.3.16</version>
  <description>libpointmatcher is a modular ICP library, useful for robotics and computer vision.</description>
  <author email="f.pomerleau@gmail.com">Francois Pomerleau</author>
  <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>
  <maintainer email="mwulf@anybotics.com">Maximilian Wulf</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/anybotics/libpointmatcher</url>

  <!-- If a pure-cmake build is desired, the buildtool should be switched to 'cmake' -->
  <!-- On the other hand, if a catkin build is desired, the build tool depend should be 'catkin' -->
  <buildtool_depend>ament_cmake</buildtool_depend>
<!--   <build_depend>cmake_clang_tools</build_depend> -->

  <build_depend>boost</build_depend>
  <build_depend>libnabo</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <exec_depend>boost</exec_depend>
  <exec_depend>libnabo</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>

<!--   <test_depend>cmake_code_coverage</test_depend> -->
  <test_depend>gtest</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
